# SimpleEmbeddingMock

./: .gitignore  LICENSE  README.md  embeddings.py  pyproject.toml  registry.py  server.py
plugins/: sentence_transformers_plugin.py  sklearn_plugin.py
