[project]
name = "simple-embedding-mock"
version = "0.1.0"
description = "OpenAI-compatible embeddings mock server. Stdlib-only core; optional plugins unlock real models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "e-marchand" }]
keywords = ["openai", "embeddings", "mock", "testing", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
# Core has zero runtime dependencies — pure stdlib.
dependencies = []

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.0"]
sklearn = ["scikit-learn>=1.0"]
all = [
    "sentence-transformers>=2.0",
    "scikit-learn>=1.0",
]

[project.scripts]
simple-embedding-mock = "server:main"

[project.urls]
Homepage = "https://github.com/e-marchand/SimpleEmbeddingMock"
Repository = "https://github.com/e-marchand/SimpleEmbeddingMock"
Issues = "https://github.com/e-marchand/SimpleEmbeddingMock/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "embeddings", "registry"]

[tool.setuptools.packages.find]
include = ["plugins*"]
